<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddEventActivity"
    android:orientation="vertical">

    <include layout="@layout/custom_action_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="This is a trial version and is not completed!"
            android:textColor="@color/black"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:background="@drawable/rounded_corners"
            android:textColor="@color/white"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="selectDate"/>

        <EditText
            android:id="@+id/titleEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_title"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_margin="8dp"/>

        <EditText
            android:id="@+id/descEdit"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:hint="@string/enter_desc"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="top"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_event"
            android:background="@drawable/rounded_corners_blue"
            android:textColor="@color/white"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="32dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="addNewEvent"/>
    </LinearLayout>

</LinearLayout>