<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:orientation="vertical">

    <include layout="@layout/custom_action_bar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sql"
                        android:background="@drawable/rounded_corners"
                        android:textColor="@color/white"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:onClick="goToProducts"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/countries"
                        android:background="@drawable/rounded_corners"
                        android:textColor="@color/white"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:onClick="goToCountries"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contacts"
                        android:background="@drawable/rounded_corners"
                        android:textColor="@color/white"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:onClick="goToContacts"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map"
                        android:background="@drawable/rounded_corners"
                        android:textColor="@color/white"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:onClick="goToMaps"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_event"
                        android:background="@drawable/rounded_corners"
                        android:textColor="@color/white"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:onClick="goToEvents"/>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <ProgressBar
            android:id="@+id/homeProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </FrameLayout>

</LinearLayout>